fix(login): fix horizontal overflow issue on small screens

--- a/src/features/login/LoginForm.module.scss
+++ b/src/features/login/LoginForm.module.scss
@@ -1,5 +1,4 @@
 .paper {
-  width: 480px;
   max-width: 100%;
   padding: 3rem 2rem;
 }
